# 766-final

./: #scratch.org#  .#scratch.org  .Dockerfile.~undo-tree~  .ast_printer.cpp.~undo-tree~  .scratch.org.~undo-tree~  .script.sh.~undo-tree~  .simple-program.c.~undo-tree~  ast_printer  ast_printer.cpp  find-input-instances.sh  scratch.org  scratch.org~  script.sh  script.sh~  simple-program.c
abandon-MLIR/operation-analysis/: .mlir_op_analysis.cpp.~undo-tree~  .scratch.org.~undo-tree~  mlir_op_analysis.cpp  mlir_op_analysis.cpp~  scratch.org  scratch.org~
abandon-MLIR/operation-analysis/simple-program/: simple-program.ll  simple-program.mlir
abandon-MLIR/preliminary-work/: .#scratch.org  .preliminary.c.~undo-tree~  .preliminary.mlir.~undo-tree~  .scratch.org.~undo-tree~  a.out  preliminary.ll  preliminary.mlir  scratch.org~
abandon-MLIR/preliminary-work/InputAnalysisPass/: .CMakeLists.txt.~undo-tree~  .InputAnalysisPass.cpp.~undo-tree~  .InputAnalysisPass.cpp~.~undo-tree~  .old.cpp.~undo-tree~  CMakeLists.txt  CMakeLists.txt~  InputAnalysisPass.cpp  InputAnalysisPass.cpp~  old.cpp  old.cpp~
for-loop-analysis/: .ast_printer.cpp.~undo-tree~  .scratch.org.~undo-tree~  ast_printer  scratch.org
i-o-analysis/: #cpp_files.c#  #i-o-analysis.cpp#  #scratch.org#  .#i-o-analysis.cpp  .convert.c.~undo-tree~  .cpp_files.c.~undo-tree~  .i-o-analysis.cpp.~undo-tree~  .scratch.org.~undo-tree~  i-o-analysis  i-o-analysis.cpp  i-o-analysis.cpp~  scratch.org
